--- a/public/assets/css/custom.css
+++ b/public/assets/css/custom.css
@@ -34,7 +34,7 @@
 .principal-icon {
     font-size: 70px;
     padding: 20px 0;
-    color: #ff6f0f;
+    color: #d99976;
 }
 .supply-chain-image {
     border-radius: 20px;
